--- a/.github/workflows/publish-web.yml
+++ b/.github/workflows/publish-web.yml
@@ -19,21 +19,23 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./web
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v1
         id: pages
       - uses: actions/setup-node@v3
-        working-directory: ./web
         with:
           node-version: 16
           cache: 'npm'
-      - run: npm --prefix web run build
+      - run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./web/build
+          path: ./build
 
   deploy:
     runs-on: ubuntu-latest
