--- a/.github/workflows/publish-web.yml
+++ b/.github/workflows/publish-web.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./build
+          path: ./web/build
 
   deploy:
     runs-on: ubuntu-latest
