--- a/ui/package.json
+++ b/ui/package.json
@@ -10,19 +10,19 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.15.9",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.8",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.44.0",
-    "tabler-icons-svelte": "^1.8.0",
     "tailwindcss": "^3.2.4"
   },
   "type": "module",
   "dependencies": {
     "@sveltestack/svelte-query": "^1.6.0",
+    "@tabler/icons-svelte": "^2.17.0",
     "daisyui": "^2.14.3",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
